--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
   "packageManager": "yarn@3.2.3",
   "engines": {
     "node": ">=20.18.3"
+  },
+  "dependencies": {
+    "solidity-docgen": "^0.6.0-beta.36"
   }
 }
