--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -22,18 +22,22 @@
   },
   "dependencies": {
     "@inquirer/password": "^4.0.2",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/contracts": "~5.0.2",
+    "@openzeppelin/contracts-upgradeable": "^5.2.0",
     "@typechain/ethers-v6": "~0.5.1",
     "dotenv": "~16.4.5",
     "envfile": "~7.1.0",
-    "qrcode": "~1.5.4"
+    "hardhat-contract-sizer": "^2.10.0",
+    "solady": "^0.1.12"
   },
   "devDependencies": {
     "@ethersproject/abi": "~5.7.0",
     "@ethersproject/providers": "~5.7.2",
     "@nomicfoundation/hardhat-chai-matchers": "~2.0.7",
     "@nomicfoundation/hardhat-ethers": "~3.0.8",
-    "@nomicfoundation/hardhat-network-helpers": "~1.0.11",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.10",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.12",
     "@nomicfoundation/hardhat-verify": "~2.0.10",
     "@typechain/ethers-v5": "~11.1.2",
     "@typechain/hardhat": "~9.1.0",
@@ -49,6 +53,7 @@
     "eslint-plugin-prettier": "~5.2.1",
     "ethers": "~6.13.2",
     "hardhat": "~2.22.10",
+    "hardhat-abi-exporter": "^2.10.1",
     "hardhat-deploy": "~0.12.4",
     "hardhat-deploy-ethers": "~0.4.2",
     "hardhat-gas-reporter": "~2.2.1",
