--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -25,10 +25,12 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/contracts": "~5.0.2",
     "@openzeppelin/contracts-upgradeable": "^5.2.0",
+    "@openzeppelin/hardhat-upgrades": "^3.9.0",
     "@typechain/ethers-v6": "~0.5.1",
     "dotenv": "~16.4.5",
     "envfile": "~7.1.0",
     "hardhat-contract-sizer": "^2.10.0",
+    "import": "^0.0.6",
     "solady": "^0.1.12"
   },
   "devDependencies": {
